<resources>
    <string name="app_name">Budowlany organizer</string>
    <string name="title_activity_add_project">Nowy projekt</string>
    <string name="add_project_name">Nazwa projektu</string>
    <string name="add_project_date_begin">Data rozpoczęcia</string>
    <string name="add_project_date_end">Data zakończenia</string>
    <string name="cancel">anuluj</string>
    <string name="add">dodaj</string>
    <string name="title_activity_project_details">Szczególy Projektu</string>
    <string name="add_new_project">Nowy projekt</string>
    <string name="about_app">O aplikacji</string>
    <string name="delete">Usuń</string>
    <string name="delete_project">Usuń projekt</string>
    <string name="deleted">Usunięto</string>
    <string name="add_room">Dodaj pomieszczenie</string>
    <string name="add_project_description">Opis</string>
    <string name="add_project_success">Dodano projekt</string>
    <string name="edit_project_success">Zmodyfikowano projekt</string>
    <string name="add_project_fail">Błąd utworzenia projektu</string>
    <string name="edit">Edytuj</string>
    <string name="added">Dodano</string>
    <string name="edited">Zedytowano</string>
    <string name="error">Błąd</string>
    <string name="project">Projekt</string>
    <string name="income">Przychody</string>
    <string name="add_income">Dodaj przychód</string>
    <string name="add_spending">Dodaj wydatek</string>
    <string name="add_global_spending">Dodaj globalny koszt</string>
    <string name="list_global_spending">Lista globalnych kosztów</string>
    <string name="name">Nazwa</string>
    <string name="value">Wartość</string>
    <string name="title_activity_edit_project">Edytuj projekt</string>
    <string name="title_activity_add_room">Dodaj pomieszczenie</string>
    <string name="add_room_name">Nazwa pokoju</string>
    <string name="add_room_width">Szerokość</string>
    <string name="add_room_length">Długość</string>
    <string name="add_room_height">Wysokość</string>
    <string name="add_room_area">Powierzchnia</string>
    <string name="add_room_wall_area">Powierzchnia ścian</string>
    <string name="add_room_perimeter">Obwód</string>
    <string name="rooms_hint">Pomieszczenia</string>
    <string name="once_income">Przychód cykliczny</string>
    <string name="monthly">Co miesiąc</string>
    <string name="date">Data</string>
    <string name="spendings">Wydatki</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="text_dims">Wymiary:</string>
    <string name="are_you_sure">Czy na pewno?</string>
    <string name="title_activity_edit_room">Edytuj pomieszczenie</string>
    <string name="title_activity_add_income">Dodaj przychód</string>
    <string name="more">Więcej</string>
    <string name="title_activity_add_spending">Dodaj wydatek</string>
    <string name="room">Pomieszczenie</string>
    <string name="quantity">Ilość</string>
    <string name="change_state">Zmień status ukończenia</string>
    <string name="house">DOM</string>
    <string name="unit_price">Cena jednostkowa</string>
    <string name="type">Rodzaj</string>s
    <string name="expense_item">Przedmiot</string>
    <string name="all_project_cost">Koszt całkowity</string>
    <string name="all_project_remaining_cost">Pozostały koszt</string>
    <string name="project_income_end">Przychód do końca</string>
    <string name="project_estimated_end">Przewidywane zakończenie</string>

    <string name="title_activity_expense">Wydatki globalne</string>
    <string name="spending_no_room">Wydatek dotyczy całego domu</string>
    <string name="title_activity_add_expense">Dodaj wydatek globalny</string>
    <string name="title_activity_edit_expense">Edytuj wydatek globalny</string>

    <string name="ITEM_COUNT">Sztuki</string>
    <string name="LENGTH">Długość</string>
    <string name="SQUARE_FLOOR">Powierzchnia ścian</string>
    <string name="SQUARE_WALL">Powierzchnia podłogi</string>
    <string name="refresh">Odśwież</string>

    <string name="all_cost">Koszt całkowity: %1$s</string>
    <string name="value_square_meter">%1$s m2</string>
    <string name="value_price">%1$szł</string>
    <string name="done_what">Zrobione - %1$s</string>

    <string name="validation_no_error">Nieprawidłowa lub pusta nazwa</string>
    <string name="validation_name_error">Nieprawidłowa nazwa</string>
    <string name="validation_date_error">Data zakończenia nie może być wcześniejsza niz data rozpoczęcia</string>
</resources>
