<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="riper.housebuilder.ProjectDetailsActivity">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_edit"
        android:title="@string/edit" />
    <item
        android:id="@+id/action_add_room"
        android:title="@string/add_room" />
    <item
        android:id="@+id/action_add_income"
        android:title="@string/add_income" />
    <item
        android:id="@+id/action_add_spending"
        android:title="@string/add_spending" />
    <item
        android:id="@+id/action_add_expense"
        android:title="@string/list_global_spending" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_project" />
</menu>




